syntax = "proto3";

//import "google/protobuf/timestamp.proto";
import "proto/common/v1/common.proto";

option go_package = "chat/api/helloWorld/v1;helloWorld";

package helloWorld.v1;

enum HelloWorldStatus {
  HelloWorldStatusNone = 0;
  HelloWorldStatusDoing = 1;
  HelloWorldStatusDone = 2;
  HelloWorldStatusUnknown = 100;
}

message HelloWorldModel {
  string id = 1;
  common.v1.HelloWorldCommon common = 2;
  string language = 3;
  HelloWorldStatus status = 4;
  bool deleted = 5;
  //  google.protobuf.Timestamp startTime = 6;
  //  google.protobuf.Timestamp endTime = 7;
}

message HelloWorldListModel {
  repeated HelloWorldModel data = 1;
}

message GetHelloWorldByLanguageRequest {
  string language = 1;
}

service HelloWorld {
  rpc GetHelloWorldByLanguage(GetHelloWorldByLanguageRequest) returns(HelloWorldListModel);
}